# trajectory_planning

./: .~lock.Untitled 2.odt#  CMakeLists.txt  Git_分支管理.txt  LICENSE  README.md  Untitled 1.odt  Untitled 2.odt  data_result  data_zhenyu.rar  result_data
data/: 1.fig  QtoC.m  QtoEulerAngle.m  data  main.m
include/: PSOAlgorithm.h  TLBO_Algorithm.h  WOAAlgorithm.h  data.h  forward_kinematics.h  utils.h
kinetics/: CMakeLists.txt  J_Base2EE.cpp  J_bm.cpp  calc_p.cpp  calc_para_range.cpp  calc_r.cpp  forward_kin.cpp  forward_kin_2.cpp  forward_kin_3.cpp  global_data.cpp  links_transform.cpp
openGJK/: CMakeLists.txt  openGJK.c
src/: main_1.cpp  normal_distribution  normal_distribution.cpp  test_kinematics.cpp  test_main_3.cpp  test_main_4.cpp  test_main_5.cpp  test_main_6.cpp  test_woa_levy_flight.cpp  woa_levy_flight_greedy.cpp
test_GPS_WOA_TLBO_result/: Bezier_calc_forward_kinematics.py  Cxyz.py  calc_A_b.py  calc_Euler_dev2angvl.py  calc_J_bE.py  calc_J_bm.py  calc_binomial.py  calc_dc2euler.py  calc_links_transform.py  calc_p.py  calc_quaternion2dc.py  calc_quaternion2euler.py  calc_quaternion2euler_2.py  calc_r.py  calc_v.py  calc_w.py  calc_zyx2quaternion.py  cao_gao.py  cross.py  euler_ZYX2dc.py  f_tau_acc.py  f_tau_vel.py  test_22.py  test_plot_figures.py  text_save.py
utils/: CMakeLists.txt  LU_inv_solver.cpp  MatrixDiagExpand.cpp  MatrixMulti.cpp  MatrixMultiTranspose.cpp  MatrixMulti_.cpp  MatrixTranspose.cpp  MatrixTranspose_.cpp  calc_Euler_dev2angvl.cpp  cxyz.cpp  dc2euler.cpp  determinantOfMatrix.cpp  euler_ZYX2dc.cpp  quaternion2dc.cpp  quaternion2euler.cpp  random_float_generation.cpp  rpy2dc.cpp  zyx2quaternion.cpp
